--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,11 @@ set(OPENSSL_LIBRARIES /usr/local/ssl/lib)
 
 add_subdirectory(dependencies)
 
-add_executable(GOSH_FHIRworks2020_datamasker src/db.hh src/main.cc src/api.cc src/api.hh
+add_executable(GOSH_FHIRworks2020_datamasker src/main.cc src/api/api.hh src/api/api_config.hh
         src/patient/patient.hh src/patient/name.hh src/patient/address.hh src/patient/geolocation.hh
         src/patient/language.hh
         src/patient/encoding.hh src/patient/telecom.hh src/patient/identifier.hh src/patient/identifier_type.hh
-        src/patient/marital_status.hh src/patient/gender.hh )
+        src/patient/marital_status.hh src/patient/gender.hh src/masker.hh)
 
 include_directories(${CPR_INCLUDE_DIRS} ${JSON_INCLUDE_DIRS})
 target_link_libraries(GOSH_FHIRworks2020_datamasker ${CPR_LIBRARIES})
