--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: cpp
 compiler: clang
+env:
+  - COMPILER=clang++-7
+  - CXXFLAGS=-std=c++17
 install:
   - git submodule update --init --recursive
 before_script:
