attempt to specifiy everything from json lib

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,19 @@
 language: cpp
-env:
-  - CXXFLAGS=-std=c++17
+matrix:
+  include:
+    - os: linux
+      compiler: clang
+      env:
+        - COMPILER=clang++-7
+        - CMAKE_OPTIONS=-DJSON_Sanitizer=ON
+        - UBSAN_OPTIONS=print_stacktrace=1,suppressions=$(pwd)/test/src/UBSAN.supp
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-7']
+          packages: ['g++-6', 'clang-7', 'ninja-build']
+      before_script:
+        - export PATH=$PATH:/usr/lib/llvm-7/bin
+
 install:
   - git submodule update --init --recursive
 before_script:
