update to gcc 9

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,12 @@ language: cpp
 matrix:
   include:
     - os: linux
-      compiler: clang
-      env:
-        - COMPILER=clang++-7
-        - CMAKE_OPTIONS=-DJSON_Sanitizer=ON
-        - UBSAN_OPTIONS=print_stacktrace=1,suppressions=$(pwd)/test/src/UBSAN.supp
+      compiler: gcc
+      env: COMPILER=g++-9
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-7']
-          packages: ['g++-6', 'clang-7', 'ninja-build']
-      before_script:
-        - export PATH=$PATH:/usr/lib/llvm-7/bin
+          sources: ['ubuntu-toolchain-r-test']
+          packages: ['g++-9']
 
 install:
   - git submodule update --init --recursive
