--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(JSON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/json/include PARENT_SCOPE)
 
 set(BUILD_CPR_TESTS OFF CACHE BOOL "Don't build cpr tests")
+set(JSON_BuildTests OFF CACHE INTERNAL "Don't build json tests")
 
 find_package(CURL)
 if(CURL_FOUND)
