--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(JSON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/json/include PARENT_SCOPE)
+set(CATCH2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/Catch2/single_include PARENT_SCOPE)
 
 set(BUILD_CPR_TESTS OFF CACHE BOOL "Don't build cpr tests")
 set(JSON_BuildTests OFF CACHE INTERNAL "Don't build json tests")
@@ -10,3 +11,4 @@ endif()
 
 add_subdirectory(json)
 add_subdirectory(cpr)
+add_subdirectory(Catch2)
