--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -9,6 +9,8 @@ if(CURL_FOUND)
     set(USE_SYSTEM_CURL ON CACHE BOOL "Use the system curl for faster builds")
 endif()
 
+include(Catch2/contrib/ParseAndAddCatchTests.cmake)
+
 add_subdirectory(json)
 add_subdirectory(cpr)
 add_subdirectory(Catch2)
