--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(src)
 
 include_directories(${CPR_INCLUDE_DIRS} ${JSON_INCLUDE_DIRS} ${CATCH2_INCLUDE_DIRS} ${SOURCE_DIRS})
 
-add_executable(GOSH_FHIRworks2020_datamasker src/main.cc src/api/api.hh src/api/api_config.hh
+add_executable(GOSH_FHIRworks2020_datamasker src/main.cc src/api/api.hh src/config/config.hh
         src/patient/patient.hh src/patient/name.hh src/patient/address.hh src/patient/geolocation.hh
         src/patient/language.hh
         src/patient/encoding.hh src/patient/telecom.hh src/patient/identifier.hh src/patient/identifier_type.hh
@@ -22,7 +22,7 @@ add_executable(GOSH_FHIRworks2020_datamasker src/main.cc src/api/api.hh src/api/
         src/generator/generator_random.hh src/generator/birthday_generator.hh)
 target_link_libraries(GOSH_FHIRworks2020_datamasker ${CPR_LIBRARIES})
 
-add_executable(GOSH_FHIRworks2020_datamasker_test test/test_api.cc test/test_generator.cc test/test_main.cc)
+add_executable(GOSH_FHIRworks2020_datamasker_test test/test_api.cc test/test_generator.cc test/test_main.cc test/test_config.hh)
 target_link_libraries(GOSH_FHIRworks2020_datamasker_test Catch2::Catch2 ${CPR_LIBRARIES})
 
 enable_testing()
