--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ add_executable(GOSH_FHIRworks2020_datamasker src/main.cc src/api/api.hh src/conf
         src/generator/multiple_birth_generator.hh src/masker/masker.hh src/filter/filter.hh
         src/generator/gender_generator.hh src/generator/generator_with_weight.hh
         src/generator/generator_random.hh src/generator/birthday_generator.hh)
-target_link_libraries(GOSH_FHIRworks2020_datamasker ${CPR_LIBRARIES})
+spdlog_enable_warnings(GOSH_FHIRworks2020_datamasker)
+target_link_libraries(GOSH_FHIRworks2020_datamasker ${CPR_LIBRARIES} argh spdlog::spdlog)
 
 add_executable(GOSH_FHIRworks2020_datamasker_test test/test_api.cc test/test_generator.cc test/test_main.cc
         test/test_config.hh)
