--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -14,3 +14,5 @@ include(Catch2/contrib/ParseAndAddCatchTests.cmake)
 add_subdirectory(json)
 add_subdirectory(cpr)
 add_subdirectory(Catch2)
+add_subdirectory(argh)
+add_subdirectory(spdlog)
