--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ add_executable(GOSH_FHIRworks2020_datamasker src/main.cc src/api/api.hh src/conf
 target_link_libraries(GOSH_FHIRworks2020_datamasker ${CPR_LIBRARIES} argh spdlog::spdlog)
 
 add_executable(GOSH_FHIRworks2020_datamasker_test test/test_api.cc test/test_generator.cc test/test_main.cc
-        test/test_config.hh)
+        test/test_config.hh test/test_masker.cc)
 target_link_libraries(GOSH_FHIRworks2020_datamasker_test Catch2::Catch2 ${CPR_LIBRARIES})
 
 enable_testing()
