--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "dependencies/spdlog"]
 	path = dependencies/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "dependencies/tabulate"]
+	path = dependencies/tabulate
+	url = https://github.com/p-ranav/tabulate
