--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(JSON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/json/include PARENT_SCOPE)
 set(CATCH2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/Catch2/single_include PARENT_SCOPE)
+set(TABULATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/tabulate/include PARENT_SCOPE)
 
 set(BUILD_CPR_TESTS OFF CACHE BOOL "Don't build cpr tests")
 set(JSON_BuildTests OFF CACHE INTERNAL "Don't build json tests")
@@ -16,3 +17,4 @@ add_subdirectory(cpr)
 add_subdirectory(Catch2)
 add_subdirectory(argh)
 add_subdirectory(spdlog)
+add_subdirectory(tabulate)
