--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ script:
   - cmake ..
   - make
   - make test
+  - make install
+  - GOSH_FHIRworks2020_datamasker --mask --api=https://gist.githubusercontent.com/magetron/cf8e0de347e333c67f8e66c13572b111/raw/7046cca2915f6e9b68bed9c409e6e02a6cc5709e/patients.json
+
